finally fixed overlapping columns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,5 +19,9 @@ button {
 }
 
 .card {
-  max-width: 27%;  
+  max-width: 28%;  
+}
+
+.columns:last-child {
+    margin-bottom: 0 !important;
 }
